<resources>
    <string name="app_name">math</string>
    <string name="title_activity_login">Sign in</string>

    <string name="outofcourse">خروج</string>
    <string name="cancel">الغاء</string>

    <!-- Strings related to setting -->

    <string name="sound_setting">sound :</string>
    <string name="ok_setting">ok</string>
    <string name="lettters_setting">Lettters Size :</string>
    <string name="background_setting">Background color :</string>
    <string name="language_setting">Language :</string>
    <string name="option_setting">Option</string>


    <!-- Strings related to Mainactivity -->
    <string name="mainactivity_logInTheHomePage">log in</string>
    <string name="mainactivity_optionInHomePage">option</string>
    <string name="mainactivity_signUpTheHomePage">sign Up</string>

    <!-- Strings related to Mainactivity2-->

    <string name="mainactivity2_profile">profile </string>
    <string name="mainactivity2_Add">Add </string>
    <string name="mainactivity2_Subtract">Subtract </string>
    <string name="mainactivity2_Multiply">Multiply </string>
    <string name="mainactivity2_Divide">Divide </string>
    <string name="mainactivity2_Signout">Sign out </string>

    <!-- Strings related to opertions-->

    <string name="opertions_Question">Question : </string>
    <string name="opertions_CLR">CLR </string>
    <string name="opertions_OK">OK</string>
    <string name="opertions_thatset">that set </string>


    <!-- Strings related to questions-->

    <string name="questions_Questions">Questions</string>
    <string name="questions_ChooseaLevel">Choose a Level : </string>
    <string name="questions_Whatdotoyprefertostudy">What do toy prefer to study :  </string>
    <string name="questions_Add">Add </string>
    <string name="questions_Subtract">Subtract </string>
    <string name="questions_Multiply">Multiply </string>
    <string name="questions_Divide">Divide </string>
    <string name="questions_Starttest">Start test </string>

    <!-- Strings related to result-->

    <string name="result_Result">Result</string>
    <string name="result_Add">Add :</string>
    <string name="result_Subtract">Subtract : </string>
    <string name="result_Multiply">Multiply :</string>
    <string name="result_Divide">Divide : </string>
    <string name="result_Gotoyourprofile">Go to your profile</string>

    <!-- Strings related to sign up-->

    <string name="signUp_Signup">Sign up</string>
    <string name="signUp_UserName">User Name :</string>
    <string name="signUp_Password">Password : </string>
    <string name="signUp_Email">Email : </string>


    <!-- Strings related to test-->

    <string name="test_Test">Test</string>
    <string name="test_Start">Start</string>
    <string name="test_ignore">ignore</string>
    <string name="test_option">option</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- tamer General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_tamer_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_tamer_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- tamer settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- tamer settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>


    <string-array name="spinerOFLanguages">
        <item>English</item>
        <item>עברית</item>
        <item>عربي</item>
    </string-array>

    <string-array name="spinerOFColorBackground">
        <item name="blue" type="#FF33B5E5 ">blue</item>
        <item name="purple" type="#FFAA66CC">purple</item>
        <item name="green" type="#FF99CC00">green</item>
        <item name="orange" type="#FFFFBB33">orange</item>
        <item name="red" type="#FFFF4444">red</item>
        <item name="darkblue" type="#FF0099CC">darkblue</item>
        <item name="darkpurple" type="#FF9933CC">darkpurple</item>
        <item name="darkgreen" type="#FF669900">darkgreen</item>
        <item name="darkorange" type="#FFFF8800">darkorange</item>
        <item name="darkred" type="#FFCC0000">darkred</item>
    </string-array>

    <string-array name="spinerOFSizeLetters">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>

    </string-array>

    <string-array name="spinerOFLevelTest">
        <item>1</item>
        <item>2</item>
        <item>3</item>


    </string-array>

    <string-array name="operators">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
        <item>other</item>

    </string-array>
    <string name="title_activity_login2" translatable="false">Sign in</string>
    <string name="dialog_fire_missiles">dialog</string>


</resources>

